Linux and Windows build

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,12 @@ set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
 
 find_package(SDL2 CONFIG REQUIRED)
-find_package(sdl2-image CONFIG REQUIRED)
+if (CMAKE_CXX_COMPILER_ID STREQUAL "MSVC")
+  find_package(sdl2-image CONFIG REQUIRED)
+else()
+  set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/")
+  find_package(SDL2_image REQUIRED)
+endif()
 
 add_executable(betterSDL
   src/main.cpp
@@ -15,4 +20,9 @@ add_executable(betterSDL
   src/InputHandler.h
   src/InputHandler.cpp)
 
-target_link_libraries(betterSDL PRIVATE SDL2::SDL2 SDL2::SDL2main SDL2::SDL2_image)
+if (CMAKE_CXX_COMPILER_ID STREQUAL "MSVC")
+  target_link_libraries(betterSDL PRIVATE SDL2::SDL2 SDL2::SDL2main SDL2::SDL2_image)
+else()
+  target_include_directories(betterSDL PRIVATE ${SDL2_INCLUDE_DIRS} ${SDL2_IMAGE_INCLUDE_DIRS})
+  target_link_libraries(betterSDL PRIVATE ${SDL2_LIBRARIES} ${SDL2_IMAGE_LIBRARIES})
+endif()
